# CalculatorApp-Appium-Python

./: .gitignore  README.md  pyproject.toml
allure-results/: 556c2ea3-3145-4485-bb95-bdc46fbe46b8-container.json  62be936b-12f7-4414-b7df-adff79e7c0cd-result.json  8dee87ee-5747-471c-b5c2-add9fc972b72-container.json
tests/: conftest.py  locators.py  test_addition.py  test_division.py  test_factorial.py  test_multiplication.py  test_power.py  test_sqrt.py  test_subtraction.py
tests/allure-results/: 94d9c6b7-c451-4e0c-a2e3-d8cfbfb703fc-container.json  b8764161-9ebb-45c7-aee7-5a032af19c6b-attachment.txt  bf68843a-df1c-401d-a01c-5c5964470a9a-container.json  ea8b6ddc-7ef8-46d9-b375-f2cc7f907487-result.json
utils/: utils.py
